RESOLVED FIXED256386
WebPage::mainFrameDidLayout() should not try to update layout
https://bugs.webkit.org/show_bug.cgi?id=256386
Summary WebPage::mainFrameDidLayout() should not try to update layout
Ryosuke Niwa
Reported 2023-05-05 12:51:34 PDT
WebPage::mainFrameDidLayout() shouldn't try to trigger a nested layout update.
Attachments
Ryosuke Niwa
Comment 1 2023-05-05 12:56:13 PDT
EWS
Comment 2 2023-05-06 01:25:04 PDT
Committed 263751@main (aa9c35538dcf): <https://commits.webkit.org/263751@main> Reviewed commits have been landed. Closing PR #13509 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-06 01:26:22 PDT
Note You need to log in before you can comment on or make changes to this bug.