WebPage::mainFrameDidLayout() should not try to update layout https://bugs.webkit.org/show_bug.cgi?id=256386

Reviewed by Antti Koivisto.

Add a variant of pageCount which doesn't try to update layout
and call that variant in WebPage::mainFrameDidLayout.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::pageScaleFactorChanged): Schedule
a event loop task to to update media controls instead of
synchronously updating it here as a post layout task.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::pageCount const):
(WebCore::Page::pageCountAssumingLayoutIsUpToDate const):

* Source/WebCore/page/Page.h:

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updateRendering):
(WebKit::WebPage::mainFrameDidLayout): Moved the code to update
find controller and found text range controller to updateRendering.

Canonical link: https://commits.webkit.org/263751@main